--- a/starter_code/profileStyle.css
+++ b/starter_code/profileStyle.css
@@ -2,6 +2,28 @@
     box-sizing: border-box;
 }
 
+body{
+    background-color: lightblue;
+    color: rgb(4, 11, 104);
+    /* fonts to use as backups*/
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 16px;
+    font-weight: lighter;
+}
+
+a{
+    text-decoration: none;
+    color: black;
+}
+
+a:hover {
+    color: darkorange;
+}
+
+a:active{
+    color:aliceblue;
+}
+
 header{
     margin: 10px 20px 30px 40px;
     /* How to check what you're formatting
@@ -17,22 +39,17 @@ header{
     color: blue;
 }
 
-body{
-    background-color: lightblue;
-    color: rgb(4, 11, 104);
-    /* fonts to use as backups*/
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 16px;
-    font-weight: lighter;
+.flex-container{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 10vw;
 }
 
 .container{
     width: 80%;
     margin: auto;
-}
-
-h1{
-    color: #ff0000
 }
 
 .box-1{
@@ -48,6 +65,10 @@ h1{
     border-bottom:5px #ff0000 dotted;
     border-left: 10px rgb(4, 11, 104) dashed;
     border-right: 15px teal dashed;
+}
+
+h1{
+    color: #ff0000
 }
 
 ul{
